--- a/10/myPanel/myPanel.html
+++ b/10/myPanel/myPanel.html
@@ -10,6 +10,7 @@
   <button id="open-resource">查看当前页面HTML代码的第20行</button>
   <button id="inspect-element">查看页面第一张图片(页面需要有图片)</button>
   <button id="get-all-resources">获取当前页面所有Resources</button>
+  <button id="get-dp-dom-btn">测试获取dp dom</button>
   <script src="./js/myPanel.js"></script>
 </body>
 </html>
